raylib/raylib.odin


    @(link_name="ExportWave")
    export_wave :: proc(
        wave : Wave,
        file_name : cstring
    ) ---;

    @(link_name="ExportWaveAsCode")
    export_wave_as_code :: proc(
        wave : Wave,
        file_name : cstring
    ) ---;

    @(link_name="PlaySound")
    play_sound :: proc(sound : Sound) ---;

    @(link_name="PauseSound")
    pause_sound :: proc(sound : Sound) ---;

    @(link_name="ResumeSound")
    resume_sound :: proc(sound : Sound) ---;

    @(link_name="StopSound")
    stop_sound :: proc(sound : Sound) ---;

    @(link_name="IsSoundPlaying")
    is_sound_playing :: proc(sound : Sound) -> bool ---;

    @(link_name="SetSoundVolume")
    set_sound_volume :: proc(
        sound : Sound,
        volume : _c.float
    ) ---;

    @(link_name="SetSoundPitch")
    set_sound_pitch :: proc(
        sound : Sound,
        pitch : _c.float
    ) ---;

    @(link_name="WaveFormat")
    wave_format :: proc(
        wave : ^Wave,
        sample_rate : _c.int,
        sample_size : _c.int,
        channels : _c.int
    ) ---;

    @(link_name="WaveCopy")
    wave_copy :: proc(wave : Wave) -> Wave ---;

    @(link_name="WaveCrop")
    wave_crop :: proc(
        wave : ^Wave,
        init_sample : _c.int,
        final_sample : _c.int
    ) ---;

    @(link_name="GetWaveData")
    get_wave_data :: proc(wave : Wave) -> ^_c.float ---;

    @(link_name="LoadMusicStream")
    load_music_stream :: proc(file_name : cstring) -> Music ---;

    @(link_name="UnloadMusicStream")
    unload_music_stream :: proc(music : Music) ---;

    @(link_name="PlayMusicStream")
    play_music_stream :: proc(music : Music) ---;

    @(link_name="UpdateMusicStream")
    update_music_stream :: proc(music : Music) ---;

    @(link_name="StopMusicStream")
    stop_music_stream :: proc(music : Music) ---;

    @(link_name="PauseMusicStream")
    pause_music_stream :: proc(music : Music) ---;

    @(link_name="ResumeMusicStream")
    resume_music_stream :: proc(music : Music) ---;

    @(link_name="IsMusicPlaying")
    is_music_playing :: proc(music : Music) -> bool ---;

    @(link_name="SetMusicVolume")
    set_music_volume :: proc(
        music : Music,
        volume : _c.float
    ) ---;

    @(link_name="SetMusicPitch")
    set_music_pitch :: proc(
        music : Music,
        pitch : _c.float
    ) ---;

    @(link_name="SetMusicLoopCount")
    set_music_loop_count :: proc(
        music : Music,
        count : _c.int
    ) ---;

    @(link_name="GetMusicTimeLength")
    get_music_time_length :: proc(music : Music) -> _c.float ---;

    @(link_name="GetMusicTimePlayed")
    get_music_time_played :: proc(music : Music) -> _c.float ---;

    @(link_name="InitAudioStream")
    init_audio_stream :: proc(
        sample_rate : _c.uint,
        sample_size : _c.uint,
        channels : _c.uint
    ) -> AudioStream ---;

    @(link_name="UpdateAudioStream")
    update_audio_stream :: proc(
        stream : AudioStream,
        data : rawptr,
        samples_count : _c.int
    ) ---;

    @(link_name="CloseAudioStream")
    close_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="IsAudioBufferProcessed")
    is_audio_buffer_processed :: proc(stream : AudioStream) -> bool ---;

    @(link_name="PlayAudioStream")
    play_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="PauseAudioStream")
    pause_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="ResumeAudioStream")
    resume_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="IsAudioStreamPlaying")
    is_audio_stream_playing :: proc(stream : AudioStream) -> bool ---;

    @(link_name="StopAudioStream")
    stop_audio_stream :: proc(stream : AudioStream) ---;

    @(link_name="SetAudioStreamVolume")
    set_audio_stream_volume :: proc(
        stream : AudioStream,
        volume : _c.float
    ) ---;

    @(link_name="SetAudioStreamPitch")
    set_audio_stream_pitch :: proc(
        stream : AudioStream,
        pitch : _c.float
    ) ---;

}
